# Hecatoncheir

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  agent.cpp  build-ui.sh  build.sh  build_cluster.sh  build_local.sh  build_new.sh  build_old.sh  config.ini  config_cluster.ini  config_local.ini  contains_fr_results.txt  contains_results.txt  controller.cpp  datasets.ini  debug_instructions.txt  diff.txt  diffs.txt  documentation.sh  events.0.edf  gather_profiles.sh  hostfile  intersect_results_correct.txt  intersect_results_wrong.txt  load_dataset.sh  log.txt  log_collect.txt  log_count.txt  nodes  nodes_test  out.txt  profile.0.0.0  rename_profiles.sh  run.sh  run_cluster.sh  run_local.sh  (+5 more)
APRIL/: APRIL.h  CMakeLists.txt
APRIL/include/: controller.h  join.h  storage.h
APRIL/src/: controller.cpp  storage.cpp
Hecatoncheir/: CMakeLists.txt  Hecatoncheir.cpp  Hecatoncheir.h  agent.cpp  controller.cpp  worker.cpp
Hecatoncheir/API/: Hecatoncheir.cpp  Hecatoncheir.h  containers.cpp  containers.h  def.h
Hecatoncheir/UI/: CMakeLists.txt  hecatoncheir.txt  package-lock.json  package.json
Hecatoncheir/UI/backend/: hec_gui.cpp  hec_gui.h  hec_server.cpp  package-lock.json  package.json  server.js
Hecatoncheir/UI/backend/temp_files/: 1758199181340-NN_queries_100.tsv  1760437974331-NN_queries_30K.tsv  1760439760799-USA_c0.01_n10000_polygons.wkt  1760440009194-USA_c0.1%_n10000.wkt  1760440482973-USA_c0.1_n10000_polygons.wkt  1760443197524-data_sample_points.wkt  1760443197524-random_points_10K.wkt
Hecatoncheir/UI/frontend/: .env.local  package-lock.json  package.json
Hecatoncheir/UI/frontend/public/: index.html
Hecatoncheir/UI/frontend/src/: App.tsx  index.css
Hecatoncheir/UI/frontend/src/components/: app-header.tsx  home-page.tsx  pc-list.tsx  set-up-hecatoncheir.tsx
Hecatoncheir/include/: config_pub.h  config_pub.h.in  containers.h  controller.h  def.h  proc.h  utils.h
Hecatoncheir/include/APRIL/: filter.h  generate.h  join.h  storage.h
Hecatoncheir/include/TwoLayer/: filter.h
Hecatoncheir/include/UniformGrid/: filter.h
Hecatoncheir/include/config/: configure.h  parse.h  setup.h  statement.h
Hecatoncheir/include/env/: comm.h  comm_common.h  comm_def.h  comm_host.h  comm_worker.h  pack.h  partitioning.h  recv.h  send.h
Hecatoncheir/include/refinement/: topology.h
Hecatoncheir/include/storage/: read.h  utils.h
Hecatoncheir/resources/: config_cluster.ini  datasets.ini
Hecatoncheir/src/: containers.cpp  def.cpp  proc.cpp  utils.cpp
Hecatoncheir/src/APRIL/: filter.cpp  generate.cpp  join.cpp  storage.cpp
Hecatoncheir/src/TwoLayer/: filter.cpp  intersection_join_filter.cpp  range_filter.cpp  topology_join_filter.cpp
Hecatoncheir/src/UniformGrid/: dj_filter.cpp  filter.cpp  knn_filter.cpp  range_filter.cpp
Hecatoncheir/src/config/: configure.cpp  parse.cpp  setup.cpp  statement.cpp
Hecatoncheir/src/env/: comm.cpp  comm_common.cpp  comm_host.cpp  comm_worker.cpp  pack.cpp  partitioning.cpp  recv.cpp  send.cpp
Hecatoncheir/src/refinement/: topology.cpp
Hecatoncheir/src/storage/: read.cpp  utils.cpp  write.cpp
Hecatoncheir/test/: BaseTest.h  CMakeLists.txt  test.cpp
Hecatoncheir/test/classes/: CoreTest.cpp  CoreTest.h  QueryTest.cpp  QueryTest.h
Hecatoncheir/test/samples/: data_sample1.tsv  data_sample_linestrings.wkt  data_sample_polygons_1.wkt  data_sample_polygons_2.wkt  query_sample_points.wkt  query_sample_polygons.wkt
Rasterizer/: CMakeLists.txt  LICENSE.txt  Rasterizer.h
Rasterizer/include/: datatypes.h  def.h  generate.h  intervalization.h  rasterization.h  utils.h
Rasterizer/src/: def.cpp  generate.cpp  intervalization.cpp  rasterization.cpp  utils.cpp
SpatialLib/: CMakeLists.txt  SpatialLib.h
SpatialLib/include/: data.h  def.h  mappings.h  refinement.h  timer.h
SpatialLib/src/: data.cpp  def.cpp  mapppings.cpp  refinement.cpp  timer.cpp
TwoLayerFilter/: CMakeLists.txt  TwoLayer.h
TwoLayerFilter/include/: controller.h  def.h  filter.h  partitioning.h  relation.h
TwoLayerFilter/src/: controller.cpp  def.cpp  filter.cpp  partitioning.cpp  relation.cpp
_APRIL/: APRIL.h  CMakeLists.txt
_APRIL/include/: query.h  topology.h  utils.h
_APRIL/src/: join.cpp  query.cpp  storage.cpp  topology.cpp  utils.cpp
docs/: API_2containers_8cpp_source.html  API_2containers_8h_source.html  API_2def_8h_source.html  APRIL_2filter_8cpp_source.html  APRIL_2filter_8h_source.html  BaseTest_8h_source.html  CoreTest_8cpp_source.html  CoreTest_8h_source.html  Hecatoncheir_8cpp_source.html  Hecatoncheir_8h_source.html  QueryTest_8cpp_source.html  QueryTest_8h_source.html  TwoLayer_2filter_8cpp_source.html  TwoLayer_2filter_8h_source.html  TwoLayer_2range__filter_8cpp_source.html  UniformGrid_2filter_8cpp_source.html  UniformGrid_2filter_8h_source.html  UniformGrid_2range__filter_8cpp_source.html  actions_8cpp_source.html  actions_8h_source.html  annotated.html  classBaseIndex-members.html  classBaseIndex.html  classBaseIndex__coll__graph.map  classBaseIndex__coll__graph.md5  classBaseIndex__inherit__graph.dot  classBaseIndex__inherit__graph.map  classBaseIndex__inherit__graph.md5  classBaseIndex_a7a25aa98ab3f9e8ac547576f654fea26_icgraph.dot  classBaseIndex_a7a25aa98ab3f9e8ac547576f654fea26_icgraph.map  classBaseIndex_a7a25aa98ab3f9e8ac547576f654fea26_icgraph.md5  classBaseTest-members.html  classBaseTest.html  classBaseTest__coll__graph.map  classBaseTest__coll__graph.md5  classBaseTest__inherit__graph.dot  classBaseTest__inherit__graph.map  classBaseTest__inherit__graph.md5  classCoreTest-members.html  classCoreTest.html  (+890 more)
docs/html/: APRIL_2filter_8cpp_source.html  APRIL_2filter_8h_source.html  TwoLayer_2filter_8h_source.html  annotated.html  comm_8cpp_source.html  containers_8h.html  (+170 more)
driver/: CMakeLists.txt  driver.cpp  driver_template.cpp
include/: containers.h  def.h  log.h  proc.h  utils.h
spawn-1/: profile.0.0.0  profile.0.0.1  profile.0.0.2  profile.0.0.3  profile.0.0.4  profile.0.0.5  profile.0.0.6  profile.0.0.7  snapshot.0.0.0  snapshot.1.0.0
src/: containers.cpp  def.cpp  proc.cpp  utils.cpp
test/: run_all.sh
(+166 files in other folders)
